--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "nabavka-aqua",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "lucide-react": "0.263.1"
-    "mysql2": "^3.6.8"
+    "mysql2": "^3.6.8",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "eslint": "latest",
+    "eslint-config-next": "latest"
   }
 }
