--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mysql2": "^3.6.8",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "lucide-react": "^0.263.1"
   },
   "devDependencies": {
     "eslint": "latest",
