--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "tailwind-merge": "^1.14.0"
+     "@prisma/client": "^4.11.0"  // ili novija verzija
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
