--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@radix-ui/react-slot": "1.0.1",
     "class-variance-authority": "0.6.0",
     "clsx": "1.2.1",
-    "tailwind-merge": "1.12.0"
+    "tailwind-merge": "1.12.0",
+    "@prisma/client": "4.14.0"
   },
   "devDependencies": {
     "autoprefixer": "10.4.14",
@@ -30,6 +31,7 @@
     "eslint-config-next": "13.4.9",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
-    "@types/react-dom": "18.0.11"
+    "@types/react-dom": "18.0.11",
+    "prisma": "4.14.0"
   }
 }
