--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "1.2.1",
     "tailwind-merge": "1.12.0",
     "@prisma/client": "4.14.0"
+    "cors": "^2.8.5",
   },
   "devDependencies": {
     "autoprefixer": "10.4.14",
