--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
     "@prisma/client": "4.14.0",
     "cors": "^2.8.5"
   },
+  "scripts": {
+    "dev": "next dev",
+    "build": "prisma generate && next build", // Dodato prisma generate
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "prisma generate"  // Dodana nova skripta
+  },
   "devDependencies": {
     "autoprefixer": "10.4.14",
     "postcss": "8.4.24",
