--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build": "prisma generate && next build",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "next": "13.4.9",
@@ -24,13 +26,7 @@
     "@prisma/client": "4.14.0",
     "cors": "^2.8.5"
   },
-  "scripts": {
-    "dev": "next dev",
-    "build": "prisma generate && next build", // Dodato prisma generate
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"  // Dodana nova skripta
-  },
+
   "devDependencies": {
     "autoprefixer": "10.4.14",
     "postcss": "8.4.24",
